# sc-preprocess

./: pyproject.toml
docs/source/: CELLRANGER_MULTI.md  PBMC_1K_ATAC.md  PBMC_3k_multiome.md  PBMC_GEX.md  faq.md  index.md
sc_preprocess/: cli.py  config_generator.py  config_validator.py
sc_preprocess/schemas/: cellranger.py  config.py
sc_preprocess/utils/: utils.py
sc_preprocess/workflows/: main.smk
sc_preprocess/workflows/rules/: batch_aggregation.smk  cellranger.smk  object_creation.smk
sc_preprocess/workflows/scripts/: aggregate_batch.py  build_targets.py  create_atac_anndata.py  create_multi_mudata.py  merge_metadata.py  parse_config.py
tests/: .gitignore
tests/notebooks/: MULTI_FLEX_V2_analysis.ipynb  MULTI_GEX_VDJ.ipynb  MULTI_GEX_VDJ_CSP.ipynb
