[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-preprocess"
version = "0.1.0-dev"
authors = [
    {name = "Matthew S. Schechter", email = "mschechter@uchicago.edu"},
]
description = "Single-cell preprocessing pipeline for 10X Genomics data"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=5.1",
    "rich>=10.0",
    "packaging>=20.0",
    "scirpy>=0.16",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "sphinx-autobuild>=2021.3.14",
]

[project.scripts]
sc-preprocess = "sc_preprocess.cli:main"
sc-config-init = "sc_preprocess.config_generator:main"
sc-config-validate = "sc_preprocess.config_validator:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_preprocess*"]

[tool.setuptools.package-data]
"sc_preprocess" = ["workflows/**/*.smk", "workflows/**/*.py"]